# sgm-backend-py

./: .gitignore  README.md  bi_dataset_extractor.py  bi_neo4j_admin_import.py  bi_raw_data_formatter.py  bi_sqlite_importer.py  data_graph.db  deal_with_raw_dataset.py  deserialize_json.py  exec_instr_tracker.json  interactive_neo4j_admin_import.py  interactive_raw_data_formatter.py  interactive_sqlite_importer.py  main.py  neo4j_admin_import.py  plan.json  pyproject.toml  simple_test_data_graph.db  sqlite_import.py  test_plan.py
.VSCodeCounter/2025-03-21_01-27-54/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
config/: __init__.py
cypher/: bi-10.cypher  bi-11.cypher  bi-14.cypher  bi-2.cypher  bi-3.cypher  bi-5.cypher  bi-6.cypher  ic-1-improved.cypher  ic-1.cypher  ic-11.cypher  ic-12.cypher  ic-4.cypher  ic-5.cypher  ic-6.cypher  is-1.cypher  is-3.cypher
executor/: __init__.py  matching_ctx.py
executor/instr_ops/: abc.py  factory.py  foreach.py  get_adj.py  init.py  (+3 more)
playground/: __init__.py  del_compound.py  delegate.py  dict_update.py  lru_cache_decay.py  multiline_comment.py  post_init.py  product_iter.py  ref_deliver.py  str_enum.py
schema/: __init__.py  basic.py  json_repr_typed_dict.py
sqlite_dg_builder/: bi_6.py  ic_4.py  ic_5.py  ic_6.py  more_triangles.py  triangles.py
storage/: abc.py
tests/: bi.py  complex_sf01.py  ldbc_snb_interactive_sf01.py  simple_sf01.py  simple_test_dataset.py
utils/: candidate_set.py  dbg.py  dyn_graph.py  expanding_graph.py  tracked_lru_cache.py
(+145 files in other folders)
