[project]
name = "backend-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neomodel-stubs",
    "neomodel[rust-driver-ext]>=5.4.5",
    "networkx>=3.4.2",
    "sqlmodel>=0.0.24",
    "polars>=1.26.0",
    "tqdm>=4.67.1",
    "sortedcontainers>=2.4.0",
    "sortedcontainers-stubs>=2.4.2",
]

[tool.uv.sources]
neomodel-stubs = { git = "https://github.com/laurentS/neomodel-stubs" }
